# cross_platform_rust

android/Todo/: build.gradle
android/Todo/app/: build.gradle
android/Todo/app/src/androidTest/java/dev/ankhers/rust_todo/: ExampleInstrumentedTest.kt
android/Todo/app/src/main/: AndroidManifest.xml
android/Todo/app/src/main/java/dev/ankhers/rust_todo/: MainActivity.kt  NewListActivity.kt  TodoApplication.kt  TodoListActivity.kt  TodoListAdapter.kt  TodoListItemsAdapter.kt  TodoModule.kt
android/Todo/app/src/main/res/layout/: activity_main.xml  activity_new_list.xml  activity_todo_list.xml  todo_list_item.xml  todo_list_item_item.xml
android/Todo/app/src/main/res/values/: strings.xml
android/Todo/app/src/test/java/dev/ankhers/rust_todo/: ExampleUnitTest.kt
android/Todo/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/todo/: Cargo.toml  build.rs  uniffi.toml
rust/todo/migrations/: V20210223154453__create_lists_table.sql  V20210225111035__create_list_items_table.sql
rust/todo/src/: error.rs  lib.rs  todo.udl
rust/todo/src/db/: list.rs  list_item.rs  mod.rs  schema.rs  store.rs
rust/todo/src/db/models/: list.rs  list_item.rs
